--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
     "@clerk/nextjs": "^5.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.52.1",
+    "ai": "^4.3.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "firebase": "^10.7.1",
+    "firebase": "^12.0.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "^14.2.30",
+    "next-themes": "^0.4.6",
     "openai": "^4.20.1",
     "react": "^18",
     "react-dom": "^18",
